sdk/tests/macros_fails/macros_spec_i32.stderr
error: generics unsupported on user-defined types in contract functions
 --> tests/macros_fails/macros_spec_i32.rs:6:21
  |
6 | pub fn add(a: MyType<i32>, b: MyType<i32>) -> i8 {
  |                     ^

error: generics unsupported on user-defined types in contract functions
 --> tests/macros_fails/macros_spec_i32.rs:6:37
  |
6 | pub fn add(a: MyType<i32>, b: MyType<i32>) -> i8 {
  |                                     ^
